--- a/footers/footer_1/style.css
+++ b/footers/footer_1/style.css
@@ -74,3 +74,14 @@ i {
     border: none;
     border-top: 1px solid rgba(252, 255, 255, 0.1);
 }
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.footer-bottom .footer-list {
+    flex-direction: row;
+}
