--- a/sidebars/sidebar_2/style.css
+++ b/sidebars/sidebar_2/style.css
@@ -41,3 +41,114 @@ body {
     margin-left: 14px;
     height: 32px;
 }
+
+.sidebar button {
+    height: 60px;
+    background: transparent;
+    border: 0;
+    padding: 0;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.sidebar button > span {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    height: 48px;
+    padding: 0 12px;
+    border-radius: 24px;
+    line-height: 1;
+}
+
+.sidebar button:hover > span {
+    background: #F2F2F2;
+}
+
+.sidebar button:hover > span :is(i, img) {
+    scale: 1.05;
+}
+
+.sidebar button > span > span {
+    transition: 0.3s;
+}
+
+.sidebar button i {
+    position: relative;
+    font-size: 28px;
+    transition: 0.2s;
+}
+
+.sidebar button img {
+    width: 28px;
+    height: 28px;
+    transition: 0.2s;
+}
+
+.sidebar button i > span {
+    display: grid;
+    place-items: center;
+    height: 20px;
+    padding: 0 4px;
+    border-radius: 10px;
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    border: 1px solid #FFF;
+    background: #F9F9F9;
+    font-size: 12px;
+    font-family: 'Segoe UI';
+}
+
+.sidebar button i > em {
+    display: block;
+    width: 10px;
+    height: 10px;
+    background: #FF2F40;
+    position: absolute;
+    border-radius: 10px;
+    top: 2px;
+    right: -1px;
+    border: 1px solid #FFF;
+    color: #F9F9F9;
+    font-size: 12px;
+    font-family: 'Segoe UI';
+}
+
+.sidebar button span {
+    font-size: 17px;
+}
+
+.sidebar > nav {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.sidebar > nav button:last-child {
+    margin-top: auto;
+}
+
+@media (width < 500px) {
+    .logo-img {
+        display: none;
+    }
+
+    .logo-icon {
+        display: block;
+    }
+
+    .sidebar {
+        width: 72px;
+    }
+
+    .sidebar button > span {
+        width: 50px;
+    }
+
+    .sidebar button > span > span {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
