--- a/navbars/navbar_2/style.css
+++ b/navbars/navbar_2/style.css
@@ -74,3 +74,45 @@ body.open .navbar {
     font-size: 18px;
     color: #606468;
 }
+
+.search {
+    margin: 0 auto;
+    position: relative;
+    color: #888989;
+}
+
+.search span {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    translate: 0 -50%;
+    z-index: 1;
+    font-size: 20px;
+    color: inherit;
+}
+
+.search input {
+    width: 100%;
+    height: 44px;
+    padding-left: 46px;
+    font-size: 16px;
+    border: 0;
+    border-radius: 8px;
+    background: #EFF1F2;
+    color: inherit;
+    font-family: inherit;
+    outline: none;
+}
+
+.navbar nav {
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
+}
+
+.navbar nav img {
+    flex: 0 32px;
+    width: 32px;
+    height: 32px;
+    margin-left: 8px;
+}
